--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ header { background: linear-gradient(135deg, #00bcd4, #4dd0e1); }
 <header>
   <h1>Parla inglese e viaggia senza pensieri</h1>
   <p>Impara frasi pratiche in soli 15 minuti al giorno</p>
-  <a href="https://tuo-affiliate-link.com" class="cta">Prova Babbel Ora</a>
+  
+<a rel="sponsored" href="https://www.awin1.com/awclick.php?gid=322314&mid=9659&awinaffid=2764918&linkid=2038222&clickref=" class="cta">Prova Babbel Ora</a>
   <div class="disclosure">*Link affiliato: potrei ricevere una commissione se ti iscrivi.</div>
 </header>
 
