Modify footer for affiliate link and disclosure
Updated affiliate link in footer and added a new disclosure.

--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@ header { background: linear-gradient(135deg, #00bcd4, #4dd0e1); }
 </section>
 
 <footer>
-  <a href="https://tuo-affiliate-link.com" class="cta-footer">Prima lezione gratis</a>
+  
+<a rel="sponsored" href="https://www.awin1.com/awclick.php?gid=322314&mid=9659&awinaffid=2764918&linkid=2038222&clickref=" class="cta-footer">Prima lezione gratis</a>
   <span class="disclosure-footer">*Link affiliato: potrei ricevere una commissione se ti iscrivi.</span>
-  <p>© 2026 Babbel Affiliate - Tutti i diritti riservati</p>
+  <p>
+<a rel="sponsored" href="https://www.awin1.com/awclick.php?gid=322314&mid=9659&awinaffid=2764918&linkid=2038222&clickref=">Babbel</a>
+</p>
 </footer>
 
 </body>
