--- a/lavoro.html
+++ b/lavoro.html
@@ -17,7 +17,8 @@ header { background: linear-gradient(135deg, #5d4037, #8d6e63); }
 <header>
   <h1>Inglese pratico per il lavoro</h1>
   <p>Frasi reali per email, meeting e call, bastano 15 minuti al giorno</p>
-  <a href="https://tuo-affiliate-link.com" class="cta">Prova Babbel Ora</a>
+  <a rel="sponsored" href="https://www.awin1.com/awclick.php?gid=322314&mid=9659&awinaffid=2764918&linkid=2038222&clickref=" class="cta">Prova Babbel Ora</a>
+
   <div class="disclosure">*Link affiliato: potrei ricevere una commissione se ti iscrivi.</div>
 </header>
 
@@ -47,9 +48,12 @@ header { background: linear-gradient(135deg, #5d4037, #8d6e63); }
 </section>
 
 <footer>
-  <a href="https://tuo-affiliate-link.com" class="cta-footer">Prima lezione gratis</a>
+  
   <span class="disclosure-footer">*Link affiliato: potrei ricevere una commissione se ti iscrivi.</span>
-  <p>© 2026 Babbel Affiliate - Tutti i diritti riservati</p>
+  <p>
+<a rel="sponsored" href="https://www.awin1.com/awclick.php?gid=322314&mid=9659&awinaffid=2764918&linkid=2038222&clickref=">Babbel</a>
+</p>
+
 </footer>
 
 </body>
