Update affiliate links in lifelong.html

--- a/lifelong.html
+++ b/lifelong.html
@@ -17,7 +17,8 @@ header { background: linear-gradient(135deg, #2e7d32, #66bb6a); }
 <header>
   <h1>Impara inglese e stimola la mente</h1>
   <p>Lezioni brevi per adulti, pratiche e motivate: solo 15 minuti al giorno</p>
-  <a href="https://tuo-affiliate-link.com" class="cta">Prova Babbel Ora</a>
+  <a rel="sponsored" href="https://www.awin1.com/awclick.php?gid=322314&mid=9659&awinaffid=2764918&linkid=2038222&clickref=" class="cta">Prova Babbel Ora</a>
+
   <div class="disclosure">*Link affiliato: potrei ricevere una commissione se ti iscrivi.</div>
 </header>
 
@@ -47,9 +48,13 @@ header { background: linear-gradient(135deg, #2e7d32, #66bb6a); }
 </section>
 
 <footer>
-  <a href="https://tuo-affiliate-link.com" class="cta-footer">Prima lezione gratis</a>
+  <a rel="sponsored" href="https://www.awin1.com/awclick.php?gid=322314&mid=9659&awinaffid=2764918&linkid=2038222&clickref=" class="cta-footer">Prima lezione gratis</a>
+  
   <span class="disclosure-footer">*Link affiliato: potrei ricevere una commissione se ti iscrivi.</span>
-  <p>© 2026 Babbel Affiliate - Tutti i diritti riservati</p>
+  <p>
+<a rel="sponsored" href="https://www.awin1.com/awclick.php?gid=322314&mid=9659&awinaffid=2764918&linkid=2038222&clickref=">Babbel</a>
+  </p>
+  
 </footer>
 
 </body>
