--- a/studenti.html
+++ b/studenti.html
@@ -17,7 +17,8 @@ header { background: linear-gradient(135deg, #6a1b9a, #ab47bc); }
 <header>
   <h1>Inglese pratico per studenti</h1>
   <p>Impara velocemente frasi utili per università, viaggi e amici stranieri</p>
-  <a href="https://tuo-affiliate-link.com" class="cta">Prova Babbel Ora</a>
+  rel="sponsored" href="https://www.awin1.com/awclick.php?gid=322314&mid=9659&awinaffid=2764918&linkid=2038222&clickref=" class="cta">Prova Babbel Ora</a>
+  
   <div class="disclosure">*Link affiliato: potrei ricevere una commissione se ti iscrivi.</div>
 </header>
 
@@ -47,9 +48,13 @@ header { background: linear-gradient(135deg, #6a1b9a, #ab47bc); }
 </section>
 
 <footer>
-  <a href="https://tuo-affiliate-link.com" class="cta-footer">Prima lezione gratis</a>
+  <a rel="sponsored" href="https://www.awin1.com/awclick.php?gid=322314&mid=9659&awinaffid=2764918&linkid=2038222&clickref=" class="cta-footer">Prima lezione gratis</a>
+  
   <span class="disclosure-footer">*Link affiliato: potrei ricevere una commissione se ti iscrivi.</span>
-  <p>© 2026 Babbel Affiliate - Tutti i diritti riservati</p>
+  <p>
+<a rel="sponsored" href="https://www.awin1.com/awclick.php?gid=322314&mid=9659&awinaffid=2764918&linkid=2038222&clickref=">Babbel</a>
+  </p>
+  
 </footer>
 
 </body>
