Add sponsored link and disclosure to footer

--- a/lavoro.html
+++ b/lavoro.html
@@ -48,6 +48,7 @@ header { background: linear-gradient(135deg, #5d4037, #8d6e63); }
 </section>
 
 <footer>
+  <a rel="sponsored" href="https://www.awin1.com/awclick.php?gid=322314&mid=9659&awinaffid=2764918&linkid=2038222&clickref=" class="cta-footer">Prima lezione gratis</a>
   
   <span class="disclosure-footer">*Link affiliato: potrei ricevere una commissione se ti iscrivi.</span>
   <p>
