Fix HTML syntax for the logo link

--- a/lifetime_promo.html
+++ b/lifetime_promo.html
@@ -107,7 +107,7 @@
     <div class="promo-bar">Offerta a tempo limitato: Risparmia il 24%</div>
 
     <header>
-        <<a rel="sponsored" href="https://www.awin1.com/awclick.php?gid=416550&mid=9659&awinaffid=2764918&linkid=3421150&clickref=" class="logo">Babbel Lifetime</a>
+        <<a rel="sponsored" href="https://www.awin1.com/awclick.php?gid=416550&mid=9659&awinaffid=2764918&linkid=3421150&clickref=" class="logo"Babbel Lifetime</a>
     </header>
 
     <div class="container">
