Update affiliate disclosure wording in footer

--- a/lifetime_promo.html
+++ b/lifetime_promo.html
@@ -153,9 +153,9 @@
     </div>
 
     <footer>
-        <p><strong>Affiliate Disclosure:</strong> Potrei ricevere una commissione per gli acquisti effettuati tramite i link su questa pagina. Questo non influisce sul prezzo finale scontato per te.</p>
+        <p><strong>Affiliate Disclosure:</strong> Potrei ricevere una commissione per gli acquisti effettuati tramite i link su questa pagina senza costi extra per te.</p>
         <div class="footer-links">
-            <a href="https://it.pinterest.com/Nausicac">Seguici su Pinterest</a> | <a rel="sponsored" href="https://www.awin1.com/awclick.php?gid=416550&mid=9659&awinaffid=2764918&linkid=3421150&clickref=">Babbel Official</a>
+          <a href="https://it.pinterest.com/Nausicac/">Pinterest</a> |  <a rel="sponsored" href="https://www.awin1.com/awclick.php?gid=322314&mid=9659&awinaffid=2764918&linkid=2038222&clickref=">Babbel</a>
         </div>
         <p>© 2026 Babbel Lifetime Promo</p>
     </footer>
