--- a/lifetime_promo.html
+++ b/lifetime_promo.html
@@ -98,6 +98,7 @@
             text-decoration: none; font-weight: 700; font-size: 16px;
         }
 
+        /* Footer */
         footer { background: #f9f9f9; padding: 40px 20px 120px; text-align: center; font-size: 12px; color: #999; }
         .footer-links a { color: var(--b-blue); text-decoration: none; font-weight: 600; margin: 0 10px; }
     </style>
