--- a/motivazione.html
+++ b/motivazione.html
@@ -96,6 +96,7 @@
             margin-bottom: 20px;
             line-height: 1.2;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+            color: white; /* MODIFICA: Colore forzato a bianco */
         }
 
         .hero-content p {
@@ -261,7 +262,7 @@
         <div class="hero-content container">
             <h1>Trasforma lo Studio in Abitudine</h1>
             <p>Hai salvato l'ispirazione. Ora costruisci la competenza. Impara una lingua reale con il metodo scientifico di Babbel.</p>
-            <a href="INSERISCI_QUI_IL_TUO_LINK_AFFILIATO" class="btn" target="_blank" rel="nofollow noopener">Inizia la Prima Lezione Gratis</a>
+            <a rel="sponsored" href="https://www.awin1.com/awclick.php?gid=322314&mid=9659&awinaffid=2764918&linkid=2038224&clickref=" class="btn" target="_blank" rel="nofollow noopener">Inizia la Prima Lezione Gratis</a>
             <p style="font-size: 0.8rem; margin-top: 10px; opacity: 0.8;">Nessuna carta di credito richiesta per iniziare.</p>
         </div>
     </header>
